--- a/css/styles.css
+++ b/css/styles.css
@@ -812,11 +812,13 @@ body {
    transform: translate(-50%, -50%) scale(1);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-   width: 530px;
-   height: 580px;
+   width: 528px;
+   height: 581px;
    padding: 40px;
 
-   background-color: var(--primery-bg-color);   
+   background-color: var(--primery-bg-color);
+   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+   border-radius: 4px;   
 }
 
 .close{
@@ -847,22 +849,28 @@ body {
 .modal-title{
    font-weight: 700;
    font-size: 20px;
-   line-height: 23px;
+   line-height: 1.15;
    text-align: center;
    letter-spacing: 0.03em;
    color: var(--title-text-color);
-   margin: 0;
+   margin-top: 0;
+   margin-bottom: 12px;
+
    
 }
 
 .form-field {
    position: relative;
    display: block;
+   margin-bottom: 10px;
+}
+.form-field.form-textarea {
+   margin-bottom: 20px;
 }
 
 .form-label {
    display: block;
-   margin: 10px 0 4px 0;
+   margin-bottom: 4px;
 
    font-size: 12px;
    line-height: 1.17;
@@ -874,6 +882,7 @@ body {
    height: 40px;
    padding: 12px 42px;
    width: 100%;
+   
    border: 1px solid rgba(33, 33, 33, 0.2);
    border-radius: 4px;
 
@@ -910,6 +919,7 @@ body {
 }
 
 .textarea{
+   display: block;
    width: 100%;
    height: 120px;
    resize: none;
@@ -919,7 +929,10 @@ body {
    line-height: 1.17;
    letter-spacing: 0.01em;
    
-   color: var(--primery-text-color)
+   color: var(--primery-text-color);
+
+   border: 1px solid rgba(33, 33, 33, 0.2);
+   border-radius: 4px;
 }
 .textarea::placeholder{
    font-size: 12px;
@@ -939,14 +952,9 @@ body {
 
       position: absolute;
 } */
-.slave-box{
-   margin-top: 20px;
-}
-
-
-
 .checkbox-label{
    display: flex;
+   justify-content: center;
    align-items: center;
    cursor: pointer;
    
@@ -968,6 +976,7 @@ body {
 }  
 
 .checkbox-link{
+   margin-left: 3px;
    color: var(--acent);
 }
 .submit-box{
@@ -976,6 +985,7 @@ body {
 }
 
 .submit-button{
+   /* margin-left: 124px; */
    padding: 10px 55px;
    margin-top: 30px;   
 
@@ -991,4 +1001,7 @@ body {
    border-radius: 4px;
    border: 0px;
    cursor: pointer;
+}
+.slave-box{
+   text-align: center;
 }
